tdf#154827 and tdf#154428 graphics anchored in Writer as character..

..become anchored at paragraph when reopening the document

regression from
    commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
    ref-count SdrObject

This used to work by accident, previously, the SwXGroupShape that we
need would get created and destroyed and handful of times, and then
properly created.

Now, however, the first time we create it it sticks around, which means
it does not get the m_pFormat field configured correctly.

Fix this by removing the caching of m_pFormat from SwXShape, and just
fetching it from the model when we need it.

Change-Id: I10fe2ad0b877b3d928d5288e73cfed373b27a506
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150687
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>